--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
 
 build = "build.rs"
 
-[dependencies.conic_solver_api]
+#[dependencies.conic_solver_api]
 #path = "deps/conicsolverapi.rs"
 
 [dependencies]
