--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name    = "mosek"
-version = "0.6.0"
+version = "0.9.0"
 authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
+description = "Rust API for MOSEK optimization tools"
 
 build = "build.rs"
+license = "BSD-4-Clause"
 
 [dependencies]
-libc = "*"
+libc = "0.2"
