--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name    = "mosek"
 version = "10.0.0-beta.0"
 authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
 description = "Rust API for MOSEK optimization tools"
+homepage = "https://mosek.com"
+readme = "README.md"
 
 build = "build.rs"
 license = "BSD-4-Clause"
