fix invalid keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/MOSEK/Mosek.rust"
 build = "build.rs"
 license = "BSD-4-Clause"
 rust-version = "1.59"
-keywords = ["mosek","optimization","conic optimization","linear optimization","integer optimization"]
+keywords = ["mosek","optimization","conic_optimization","linear_optimization","integer_optimization"]
 categories = ["api-bindings","mathematics","science"]
 
 [dependencies]
