--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/mosek"
 repository = "https://github.com/MOSEK/Mosek.rust"
 build = "build.rs"
 license = "BSD-4-Clause"
-keywords = ["mosek","optimization","conic optimization","linear optimization","integer optimization"]
+keywords = ["mosek","optimization","conic_optimization","linear_optimization","integer_optimization"]
 categories = ["api-bindings","mathematics","science"]
 [dependencies]
 libc = "0.2"
